--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,26 +1,14 @@
-<html>
-    <head>
-        <title>Django Girls blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Django Girls Blog</a></h1>
-        </div>
+{% extends 'blog/base.html' %}
+
+
+{% block content %}
     {% for post in posts %}
-        <div>
-            <p>published: {{ post.published_date }}</p>
-            <h2><a href="">{{ post.title }}</a></h2>
-            <!-- <p>“Huzur Sitesi” İzmir, Göztepe’de denize yakın, şık bir site. Sitede 4 tane apartman var. Her apartmanda 10 tane daire bulunuyor. Mert, Kamelya Apartmanı’nda asansörde ve oldukça gergin.</p> -->
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
     {% endfor %}
-    {% for post in posts %}
-        <div>
-            <p>published: {{ post.published_date }}</p>
-            <h2><a href="">{{ post.title }}</a></h2>
-            <!-- <p>Sönük bir sigara ile oynuyor ve güneş gözlükleri hala gözünde. Yanında Adalet Hanım var, yaşlı bir komşusu. Asansördeki düğmelerin hepsine, hızlı hızlı ve üst üste basıyor.</p> -->
-            <p>{{ post.text|linebreaksbr }}</p>
-        </div>
-    {% endfor %}
-    </body>
-</html>
+{% endblock %}
